language/move-lang/tests/move_check/translated_ir_tests/commands/pop_weird.exp
error: 

    ┌── tests/move_check/translated_ir_tests/commands/pop_weird.move:13:9 ───
    │
 13 │         (_, _) = ();
    │         ------ The type: '(_, _)'
    │         ^^^^^^ Invalid value for assignment
    │                  -- Is not compatible with: '()'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/commands/pop_weird.move:14:9 ───
    │
 14 │         (_) = ();
    │         ^^^ Invalid type for local
    │               -- Expected a single type, but found expression list type: '()'
    │

